# shieldops-cli

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
shieldops-cli/: pyproject.toml
shieldops-cli/shieldops_cli/: __init__.py  api_client.py  auth.py
shieldops-cli/shieldops_cli/commands/: __init__.py  analyze.py  compose_gen.py  scan_image.py
shieldops-cli/shieldops_cli/formatters/: __init__.py  summary.py  table.py
shieldops-cli/shieldops_tui/: __init__.py  app.py  completer.py
shieldops_cli/: __init__.py  api_client.py  auth.py  config.py  local_analyzer.py  main.py
shieldops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shieldops_cli/commands/: analyze.py  autofix.py  compose_scan.py  config_cmd.py  k8s_scan.py  sbom.py  tui.py
shieldops_cli/formatters/: json_fmt.py  sarif.py  summary.py  table.py
static/js/: modern-ui.js
templates/: index.html
tests/: conftest.py  debug.py  test_analyze.py  test_auth.py  test_formatters.py  test_phase2_validation.py  test_score_zero_bug.py
