[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shieldops-cli"
version = "1.0.0"
description = "ShieldOps AI — Security scanner CLI for Docker, Kubernetes, Compose, SBOM, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ShieldOps AI", email = "support@shieldops.ai"}]
keywords = ["docker", "kubernetes", "security", "devsecops", "sbom", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "responses"]
tui = ["prompt_toolkit>=3.0.43"]

[project.scripts]
shieldops = "shieldops_cli.main:cli"

[project.urls]
Homepage = "https://shieldops-ai.onrender.com"
Documentation = "https://github.com/mohammedabdallahcv-creator/shieldops-cli"
Repository = "https://github.com/mohammedabdallahcv-creator/shieldops-cli"
Changelog = "https://github.com/mohammedabdallahcv-creator/shieldops-cli/releases"
